Update footer - change background, font sizes and contact to fix contact desktop alignment

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -18,7 +18,6 @@
 .newsletterForm input {
     border: 0;
     outline: none;
-    height: 80%;
     text-align: center;
     color: silver;
 }
