--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,7 +1,12 @@
 /** FOOTER **/
 footer {
     grid-area: footer;
-    background-image: linear-gradient(to top, #191919, #282828 50%, #191919 100%);
+    background:
+            linear-gradient(45deg, transparent 46%,rgba(114, 114, 114,0.06) 46%,rgba(94, 94, 94,0.06) 70%,transparent 70%),
+            linear-gradient(135deg, transparent 59%,rgba(114, 114, 114,0.06) 59%,rgba(124, 124, 124,0.06) 91%,transparent 91%),
+            linear-gradient(135deg, transparent 13%, rgba(124, 124, 124, 0.06) 13%, rgba(114, 114, 114, 0.06) 45%, transparent 45%),
+            linear-gradient(45deg, rgba(131, 131, 131, 0.1), rgba(121, 121, 121, 0.1) 32%, transparent 32%),
+            linear-gradient(90deg, #191919, #191919);
     border-top: 4px groove #b88f00;
     display: grid;
     grid-template-areas: "footerNewsletter" "footerItemBorder" "footerContact" "footerCopyright";
@@ -31,7 +36,7 @@ footer {
     padding: 2% 5% 2% 5%;
     box-sizing: border-box;
     grid-template-areas: "footerNewsletterTitle" "footerNewsletterSubtitle" "footerNewsletterDescription" "footerNewsletterForm";
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto auto auto;
     grid-template-columns: 1fr;
     text-align: center;
 }
@@ -45,38 +50,24 @@ footer {
 #footerNewsletter .newsletterTitle {
     grid-area: footerNewsletterTitle;
     padding: 0;
-    font-size: 3rem;
+    font-size: 320%;
     margin: 1% 0 3% 0;
-}
-
-@media only screen and (min-width: 1024px) {
-    #footerNewsletter .newsletterTitle {
-        font-size: 320%;
-    }
 }
 
 #footerNewsletter .newsletterSubtitle {
     grid-area: footerNewsletterSubtitle;
     padding: 0;
-    font-size: 2.5rem;
+    font-size: 260%;
     margin: 0 0 2% 0;
 }
 
-@media only screen and (min-width: 1024px) {
-    #footerNewsletter .newsletterSubtitle {
-        font-size: 260%;
-    }
-}
-
-
 #footerNewsletter .newsletterDescription {
     grid-area: footerNewsletterDescription;
-    font-size: 2rem;
+    font-size: 200%;
 }
 
 @media only screen and (min-width: 1024px) {
     #footerNewsletter .newsletterDescription {
-        font-size: 200%;
         width: 70%;
         margin: auto;
     }
@@ -92,31 +83,25 @@ footer {
 #footerNewsletter .newsletterForm input {
     display: block;
     width: 80%;
-    height: 6rem;
-    margin-top: 10px;
-    font-size: 2rem;
-}
-
-@media only screen and (min-width: 1024px) {
-    #footerNewsletter .newsletterForm input {
-        font-size: 250%;
-    }
+    margin-top: 15px;
+    font-size: 250%;
+    line-height: 200%;
 }
 
 #footerNewsletter .newsletterForm .newsletterSubmitButton {
-    height: 8rem;
+    line-height: 400%;
 }
 
 .footerItemBorder {
     grid-area: footerItemBorder;
     background: linear-gradient(to left, rgba(0, 0, 0, 0) 20%, rgba(155, 117, 0, 0.2) 30%, rgba(184, 143, 0, 1) 50%,
-    rgba(155, 115, 0, 0.2) 70%, rgba(0, 0, 0, 0) 80%);
+        rgba(155, 115, 0, 0.2) 70%, rgba(0, 0, 0, 0) 80%);
 }
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1200px) {
     .footerItemBorder {
         background: linear-gradient(to top, rgba(0,0,0,0) 20%, rgba(155, 117, 0, 0.2) 30%, rgba(184, 143, 0, 1) 50%,
-        rgba(155, 115, 0, 0.2) 70%, rgba(0,0,0,0) 80%);
+            rgba(155, 115, 0, 0.2) 70%, rgba(0,0,0,0) 80%);
     }
 }
 
@@ -135,34 +120,27 @@ footer {
     text-align: center;
 }
 
+@media only screen and (min-width: 1200px) {
+    #footerContact {
+        text-align: left;
+    }
+}
+
 @media only screen and (min-width: 1400px) {
     #footerContact {
         padding: 3% 0 3% 5%;
-        text-align: left;
     }
 }
 
 #footerContactTitle {
     margin: 1.5% 0 3% 0;
-    font-size: 3rem;
-}
-
-@media only screen and (min-width: 1024px) {
-    #footerContactTitle {
-        font-size: 4rem;
-    }
+    font-size: 320%;
 }
 
 #footerContactList li {
     padding: 1% 0 1% 0;
     font-weight: bold;
-    font-size: 2.5rem;
-}
-
-@media only screen and (min-width: 1024px) {
-    #footerContactList li {
-        font-size: 3rem;
-    }
+    font-size: 260%;
 }
 
 #footerContact a {
@@ -180,13 +158,7 @@ footer {
 #footerCopyright {
     grid-area: footerCopyright;
     background-image: linear-gradient(to top, #9b9b9b, #b9b9b9 50%, #9b9b9b 100%);
-    font-size: 2rem;
-}
-
-@media only screen and (min-width: 1024px) {
-    #footerCopyright {
-        font-size: 2.5rem;
-    }
+    font-size: 200%;
 }
 
 #footerCopyright span {
